# test

./: README.md  pyproject.toml
diary/: 001-project-setup.md  003-data-fetcher-tests.md  004-data-fetcher-impl.md
docs/: requirements.md
tests/: test_data_fetcher.py  test_milestones.py  test_plotter.py
tests/src/so_challenge/: data_fetcher.py
